k8s/backend/device-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: device-management-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: device-management-service
  template:
    metadata:
      labels:
        app: device-management-service
    spec:
      containers:
        - name: device-management-service
          image: quadaraacr.azurecr.io/device-management-service:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: device-management-service
  namespace: default
spec:
  selector:
    app: device-management-service
  ports:
    - port: 80
      targetPort: 80
