k8s/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quadara-backend-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /device(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: device-management-service
                port:
                  number: 80
          - path: /monitoring(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: monitoring-service
                port:
                  number: 80
